// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Unconfirmed transaction table > should not render in lg 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl w-96 min-w-96"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
              >
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 2
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
              >
                <div
                  class="rounded px-1.5 css-xqt0aw"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
              >
                <span
                  class="flex h-5 w-5 items-center justify-center text-theme-text dark:text-theme-secondary-600"
                  data-testid="TransactionRowRecipientIcon"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="multipayment"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
                        />
                        <g
                          transform="translate(299.777 174.25)"
                        >
                          <path
                            d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
                          />
                          <circle
                            cx="-292.7"
                            cy="-168"
                            r="3.1"
                          />
                        </g>
                        <g
                          transform="translate(299.777 174.25)"
                        >
                          <path
                            d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
                          />
                          <circle
                            cx="-284.9"
                            cy="-166.4"
                            r="2.6"
                          />
                        </g>
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="w-0 flex-1"
                >
                  <span>
                    <span
                      class="font-semibold text-theme-text"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
              >
                <div
                  class="rounded px-1.5 css-xqt0aw"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in md 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl w-96 min-w-96"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
              >
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 2
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
              >
                <div
                  class="rounded px-1.5 css-xqt0aw"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
              >
                <span
                  class="flex h-5 w-5 items-center justify-center text-theme-text dark:text-theme-secondary-600"
                  data-testid="TransactionRowRecipientIcon"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="multipayment"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
                        />
                        <g
                          transform="translate(299.777 174.25)"
                        >
                          <path
                            d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
                          />
                          <circle
                            cx="-292.7"
                            cy="-168"
                            r="3.1"
                          />
                        </g>
                        <g
                          transform="translate(299.777 174.25)"
                        >
                          <path
                            d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
                          />
                          <circle
                            cx="-284.9"
                            cy="-166.4"
                            r="2.6"
                          />
                        </g>
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="w-0 flex-1"
                >
                  <span>
                    <span
                      class="font-semibold text-theme-text"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
              >
                <div
                  class="rounded px-1.5 css-xqt0aw"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in sm 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <div
                    class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                  <div
                    class="w-0 flex-1"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures css-9nx3be"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 2
                        </span>
                      </span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="rounded px-1.5 css-1pbju28"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <span
                    class="flex h-5 w-5 items-center justify-center text-theme-text dark:text-theme-secondary-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="multipayment"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
                          />
                          <g
                            transform="translate(299.777 174.25)"
                          >
                            <path
                              d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
                            />
                            <circle
                              cx="-292.7"
                              cy="-168"
                              r="3.1"
                            />
                          </g>
                          <g
                            transform="translate(299.777 174.25)"
                          >
                            <path
                              d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
                            />
                            <circle
                              cx="-284.9"
                              cy="-166.4"
                              r="2.6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                  </span>
                  <div
                    class="w-0 flex-1"
                  >
                    <span>
                      <span
                        class="font-semibold text-theme-text"
                        data-testid="TransactionRowRecipientLabel"
                      >
                        Multipayment
                      </span>
                      <span
                        class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="rounded px-1.5 css-1pbju28"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in xl 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Date
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-2"
                >
                  <div
                    class="transition-transform css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl w-96 min-w-96"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top"
              >
                <div
                  class=""
                >
                  Recipient
                </div>
              </div>
            </th>
            <th
              class="group relative text-sm text-left select-none text-theme-secondary-700 border-theme-secondary-300 dark:text-theme-secondary-500 dark:border-theme-secondary-800 m-0 p-3 first:pl-6 last:pr-6 font-semibold bg-theme-secondary-100 dark:bg-theme-secondary-800  first:rounded-tl-xl last:rounded-tr-xl"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end flex-row-reverse"
              >
                <div
                  class=""
                >
                  Amount
                </div>
                <div
                  class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                >
                  <div
                    class="transition-transform rotate-180 css-15txs7d"
                    height="10"
                    role="img"
                    width="10"
                  >
                    <svg
                      id="chevron-down-small"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
              >
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 2
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
              >
                <div
                  class="rounded px-1.5 css-xqt0aw"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l space-x-3 text-theme-secondary-500 whitespace-nowrap"
              >
                <span
                  data-testid="TimeAgo"
                >
                  A few seconds ago
                </span>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
              >
                <span
                  class="flex h-5 w-5 items-center justify-center text-theme-text dark:text-theme-secondary-600"
                  data-testid="TransactionRowRecipientIcon"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="multipayment"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
                        />
                        <g
                          transform="translate(299.777 174.25)"
                        >
                          <path
                            d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
                          />
                          <circle
                            cx="-292.7"
                            cy="-168"
                            r="3.1"
                          />
                        </g>
                        <g
                          transform="translate(299.777 174.25)"
                        >
                          <path
                            d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
                          />
                          <circle
                            cx="-284.9"
                            cy="-166.4"
                            r="2.6"
                          />
                        </g>
                      </g>
                    </svg>
                  </div>
                </span>
                <div
                  class="w-0 flex-1"
                >
                  <span>
                    <span
                      class="font-semibold text-theme-text"
                      data-testid="TransactionRowRecipientLabel"
                    >
                      Multipayment
                    </span>
                    <span
                      class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                    >
                      2
                    </span>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
              >
                <div
                  class="rounded px-1.5 css-xqt0aw"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-center"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Unconfirmed transaction table > should not render in xs 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="TransactionTable"
  >
    <div
      class="css-1m6rt2i"
      role="table"
    >
      <table
        cellpadding="0"
        class="w-full table-auto"
      >
        <tbody
          role="rowgroup"
        >
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <div
                    class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(244, 67, 54)" width="100" height="100"/><circle r="50" cx="20" cy="50" fill="rgb(205, 220, 57)"/><circle r="60" cx="0" cy="70" fill="rgb(0, 188, 212)"/><circle r="55" cx="80" cy="30" fill="rgb(76, 175, 80)"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                  <div
                    class="w-0 flex-1"
                  >
                    <div
                      class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                    >
                      <span
                        class="font-semibold text-base text-theme-text"
                        data-testid="Address__alias"
                      >
                        <span
                          class="no-ligatures css-9nx3be"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 2
                        </span>
                      </span>
                      <span
                        class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="rounded px-1.5 css-1pbju28"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr
            class=" css-16ynu5g"
            data-testid="TableRow"
          >
            <td
              class="flex-col space-y-4 py-4"
              data-testid="TableRow__mobile"
            >
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Recipient
                </div>
                <div
                  class="flex w-0 flex-1 flex-row-reverse items-center justify-end space-x-4 overflow-hidden"
                >
                  <span
                    class="flex h-5 w-5 items-center justify-center text-theme-text dark:text-theme-secondary-600"
                    data-testid="TransactionRowRecipientIcon"
                  >
                    <div
                      class="css-1i4b0eq"
                      height="20"
                      width="20"
                    >
                      <svg
                        id="multipayment"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M6 14.149l-2.5-2.4-2.5 2.4M3.5 16.949v-5.2"
                          />
                          <g
                            transform="translate(299.777 174.25)"
                          >
                            <path
                              d="M-292.7-163c2.8 0 5.2 2.3 5.2 5.2h0"
                            />
                            <circle
                              cx="-292.7"
                              cy="-168"
                              r="3.1"
                            />
                          </g>
                          <g
                            transform="translate(299.777 174.25)"
                          >
                            <path
                              d="M-286.4-161.8c2.2-.8 4.6.3 5.4 2.5.2.5.2 1 .2 1.5"
                            />
                            <circle
                              cx="-284.9"
                              cy="-166.4"
                              r="2.6"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                  </span>
                  <div
                    class="w-0 flex-1"
                  >
                    <span>
                      <span
                        class="font-semibold text-theme-text"
                        data-testid="TransactionRowRecipientLabel"
                      >
                        Multipayment
                      </span>
                      <span
                        class="ml-1 font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                      >
                        2
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Date
                </div>
                <div
                  class="whitespace-nowrap text-theme-secondary-500"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between space-x-4"
              >
                <div
                  class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
                >
                  Amount
                </div>
                <div
                  class="rounded px-1.5 css-1pbju28"
                  color="danger-bg"
                  data-testid="AmountLabel__wrapper"
                >
                  <div
                    class="flex space-x-1 items-stretch"
                  >
                    <span
                      class="whitespace-nowrap text-sm"
                      data-testid="Amount"
                    >
                      - 1 DARK
                    </span>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
